--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,6 +3,7 @@ title: Introduction
 description: 'Welcome to the home of your new documentation'
 ---
 
+Hello world.
 <img
   className="block dark:hidden"
   src="/images/hero-light.svg"
