--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -5,9 +5,9 @@ description: 'Example section for showcasing API endpoints'
 
 <Note>
   If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
+  this section by removing the api-reference folder.   1234
 </Note>
-
+aaaa
 ## Welcome
 
 There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
